--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="text-center py-2 mb-2 bg-info color-white">
-            <h4>filtra per tipo</h4>
+            <h4>filter per type</h4>
             <select id="filter-icon">
                 <option value="all" selected>All</option>
                 <option value="orange">Animals</option>
